src/chrome/komodo/content/startpage/offline/css/iframe.css
/* Styling for the Komodo 5 Start Page iframes */

/* ---- base styles ----*/

body {
    margin: 0;
    padding: 0;
    overflow: hidden;
    font-size: 11px;
    color: #333333;
    font-family: Arial, Helvetica, sans-serif;
    }
a {
    outline: none;
    border: none;
    color: #3d922e;
}
a img {
    border: none;
}


/* ---- page structure ---- */

#shell {
    width: 100%;
    float: left;
    height: 200px;
    overflow: hidden;
    background: url(../img/bgcenter.gif) left top repeat-x;
}

#mainleft {
    float: left;
    width: 66%;
    height: 200px;
    margin: 0;
    padding: 0;
}

#mainleft div.content {
    padding: 24px 30px 0 20px;
    margin: 0;
}

#mainleft {
    background: url(../img/bgleft.jpg) top left no-repeat;
}


#mainleft div.content ul {
    width: 75%;
    margin: 0;
    padding: 0;
    list-style: none;
}

#mainleft div.content p {
    width: 75%;
    margin: 0;
    padding: 10px 0 0 0;
}

#mainright {
    position: absolute;
    top: 0px;
    right: 0px;
    width: 349px;
    height: 200px;
    margin: 0;
    padding: 0;
    background: url(../img/bgright.jpg) left top no-repeat;
}

#mainright div.content {
    margin: 0;
    padding: 0 10px 0 90px;
}

#mainright div.content ul {
    clear: both;
    list-style: none;
    padding: 0px 0px 0px 22px;
    margin: 0px;
}


/* ---- page-specific layout ---- */

body.page-offline #mainright div.content {
    padding-top: 30px;
}
body.page-edit #mainright div.content {
    padding-top: 30px;
}
body.page-ide #mainright div.content {
    padding-top: 20px;
}
body.page-trial #mainright div.content {
    padding-top: 40px;
}
body.page-trial2 #mainright div.content {
    padding-top: 20px;
}
body.page-beta #mainright div.content {
    padding-top: 20px;
}

/* ---- image replacements ---- */

.img-komodo-rss,
.img-welcome-trial,
.img-check-out-aspn,
.img-welcome-beta,
.img-welcome-to-komodo-ide,
.img-welcome-to-komodo-edit {
    margin: 0;
    padding: 0;
    text-indent: -3000px;
}
.img-komodo-rss {
    background: url(../img/komodo_rss.gif) 0 0 no-repeat;
    height: 50px;
}
.img-welcome-trial {
    background: url(../img/welcome_trial.gif) 0 0 no-repeat;
    height: 30px;
}
.img-check-out-aspn {
    background: url(../img/msg_checkoutaspn.gif) 0 0 no-repeat;
    height: 50px;
}
.img-welcome-beta {
    background: url(../img/welcome_beta.gif) 0 0 no-repeat;
    height: 70px;
}
.img-welcome-to-komodo-ide {
    background: url(../img/welcome_to_komodo_ide.gif) 0 0 no-repeat;
    height: 30px;
}
.img-welcome-to-komodo-edit {
    background: url(../img/welcome_to_komodo_edit.gif) 0 0 no-repeat;
    height: 30px;
}

.img-resources {
    height: 16px;
    margin: 5px 0 0 0;
    padding: 0;
    text-indent: -3000px;
    background: url(../img/resources.gif) 0 0 no-repeat;
}

